--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devStartAuth": "node authserver.js"
+    "devStart": "node authserver.js"
   },
   "repository": {
     "type": "git",
